; ModuleID = '/home/carl/AnghaBench/twemproxy/src/hashkit/extr_nc_crc32.c_hash_crc32.c'
source_filename = "/home/carl/AnghaBench/twemproxy/src/hashkit/extr_nc_crc32.c_hash_crc32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@UINT32_MAX = common dso_local global i32 0, align 4
@crc32tab = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @hash_crc32(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load i32, i32* @UINT32_MAX, align 4
  store i32 %7, i32* %6, align 4
  store i64 0, i64* %5, align 8
  br label %8

8:                                                ; preds = %28, %2
  %9 = load i64, i64* %5, align 8
  %10 = load i64, i64* %4, align 8
  %11 = icmp ult i64 %9, %10
  br i1 %11, label %12, label %31

12:                                               ; preds = %8
  %13 = load i32, i32* %6, align 4
  %14 = ashr i32 %13, 8
  %15 = load i32*, i32** @crc32tab, align 8
  %16 = load i32, i32* %6, align 4
  %17 = sext i32 %16 to i64
  %18 = load i8*, i8** %3, align 8
  %19 = load i64, i64* %5, align 8
  %20 = getelementptr inbounds i8, i8* %18, i64 %19
  %21 = load i8, i8* %20, align 1
  %22 = sext i8 %21 to i64
  %23 = xor i64 %17, %22
  %24 = and i64 %23, 255
  %25 = getelementptr inbounds i32, i32* %15, i64 %24
  %26 = load i32, i32* %25, align 4
  %27 = xor i32 %14, %26
  store i32 %27, i32* %6, align 4
  br label %28

28:                                               ; preds = %12
  %29 = load i64, i64* %5, align 8
  %30 = add i64 %29, 1
  store i64 %30, i64* %5, align 8
  br label %8

31:                                               ; preds = %8
  %32 = load i32, i32* %6, align 4
  %33 = xor i32 %32, -1
  %34 = ashr i32 %33, 16
  %35 = and i32 %34, 32767
  ret i32 %35
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
